--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
-  "type": "postgres",
+  "type": "mysql",
   "host": "localhost",
-  "port": "5432",
-  "username": "conexao",
-  "password": "root",
-  "database":"nova-escola",
+  "port": "3306",
+  "username": "root",
+  "password": "welcome",
+  "database":"goBooks",
   "entities": [
     "./src/entities/*.ts"
   ],
