--- a/package.json
+++ b/package.json
@@ -5,34 +5,48 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "dev:server": "ts-node-dev --transpileOnly --ignore-watch node_modules src/server.ts",
+    "lint": "eslint ./src/**/*.ts",
+    "dev": "ts-node-dev --inspect --ignore-watch node_modules src/server.ts",
+    "coverage": "nyc  --reporter=text --reporter=lcov --reporter=text-summary --reporter=html -e .ts -x \"./src/services/*spec.ts \"  npm test",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
-    "test": "jest"
+    "test": "ts-node node_modules/jasmine/bin/jasmine './src/**/*.spec.ts'",
+    "clear_jest": "jest --clearCache"
   },
   "dependencies": {
-    "date-fns": "^2.13.0",
+    "@material-ui/icons": "^4.11.2",
+    "@types/react-dropzone": "^5.1.0",
+    "class-transformer": "^0.4.0",
+    "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
-    "pg": "^8.0.3",
+    "pg": "^8.6.0",
+    "react-dropzone": "^11.3.2",
     "reflect-metadata": "^0.1.13",
-    "tsyringe": "^4.2.0",
-    "typeorm": "^0.2.24"
+    "tsyringe": "^4.5.0",
+    "typeorm": "^0.2.32"
   },
   "devDependencies": {
-    "jest": "^26.0.1",
-    "eslint": "^6.8.0",
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.6",
-    "@types/jest": "^25.2.2",
+    "@types/jest": "^26.0.23",
+    "@types/multer": "^1.4.5",
+    "@types/swagger-ui-express": "^4.1.2",
     "@typescript-eslint/eslint-plugin": "^2.31.0",
     "@typescript-eslint/parser": "^2.31.0",
+    "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-import-resolver-typescript": "^2.0.0",
     "eslint-plugin-import": "2.20.1",
     "eslint-plugin-prettier": "^3.1.3",
+    "jasmine": "^3.7.0",
+    "nyc": "^15.1.0",
     "prettier": "^2.0.5",
-    "ts-jest": "^25.5.1",
-    "ts-node-dev": "^1.0.0-pre.44",
+    "swagger-ui-express": "^4.1.6",
+    "ts-node": "^10.0.0",
+    "ts-node-dev": "^1.1.6",
     "typescript": "^3.8.3"
   }
 }
