--- a/ormconfig.json
+++ b/ormconfig.json
@@ -1,10 +1,10 @@
 {
-  "type": "mysql",
+  "type": "postgres",
   "host": "localhost",
-  "port": "3306",
+  "port": "5432",
   "username": "root",
   "password": "welcome",
-  "database":"goBooks",
+  "database":"gobooks",
   "entities": [
     "./src/entities/*.ts"
   ],
